Fractory - début test inté

--- a/index.html
+++ b/index.html
@@ -18,11 +18,113 @@
     <meta name="msapplication-config" content="./dist/img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title></title>
+    <title>FRACTORY - Experts workflow e-commerce - Lille - France</title>
   </head>
 
   <body>
+    <section class="Sidebar">
+      <a href="#" class="Sidebar-toggle">Menu</a>
 
+      <nav class="Sidebar-social">
+        <a class="Sidebar-socialItem" href="">Instagram</a>
+        <a class="Sidebar-socialItem" href="">Facebook</a>
+        <a class="Sidebar-socialItem" href="">Twitter</a>
+        <a class="Sidebar-socialItem" href="">LinkedIn</a>
+      </nav>
+    </section>
+
+    <section class="Logo">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h1>
+              Logo
+            </h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="About">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            Fractory
+            <div class="About-inner">
+              <h2 class="About-title">
+                En <br>
+                quelques <br>
+                lignes
+              </h2>
+
+              <p class="About-content">
+                Avec le développement de pôles comme Euratechnologies ou la Plaine Image, le secteur du numérique connait
+                une forte dynamique en métropole Lilloise. Les nouvelles entreprises ont besoin de personnel qualifié et
+                de conseils de qualité pour se développer.
+              </p>
+
+              <p class="About-content About-content--padding">
+                Le nombre d'entreprise nouvellement créées portant des projets numériques est en forte hausse, et peu
+                d'entre elles trouvent :
+              </p>
+
+              <ul class="About-items">
+                <li class="About-item">
+
+                </li>
+                <li class="About-item">
+
+                </li>
+                <li class="About-item">
+
+                </li>
+                <li class="About-item">
+
+                </li>
+                <li class="About-item">
+
+                </li>
+                <li class="About-item">
+
+                </li>
+              </ul>
+
+              <a href="#" class="About-button btn-primary">
+                En savoir +
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="Contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="Contact-title">
+              Contactez-nous.
+            </h2>
+            <p class="Contact-subtitle">
+              Discutons de votre projet.
+            </p>
+
+            <div class="row">
+              <div class="col-6">
+                <form action="#" class="Contact-form"></form>
+              </div>
+              <div class="col-6">
+                <div class="Contact-about">
+                  <h3 class="Contact-aboutTitle">
+                    Fractory
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script type="text/javascript" src="./dist/js/main.js"></script>
   </body>
