Fractory.io - test correction sidebar

--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
 
       <!-- Barre de navigation - Menu principal -->
       <nav class="Sidebar-nav">
-        <!-- Barre de navigation - Menu principal header -->
-        <header class="Sidebar-navHeader">
-          <div class="container">
-            <div class="row">
-              <div class="col-6">
+        <div class="Sidebar-navInner">
+          <!-- Barre de navigation - Menu principal header -->
+          <header class="Sidebar-navHeader">
+            <div class="container">
+              <div class="row">
+                <div class="col-6">
                 <span class="Sidebar-navLogo d-block">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
                     <path d="M80.7,68.55,45,54.64,34.14,15.9,71,30.22Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
@@ -80,61 +81,62 @@
                     <path d="M55,45.23,28.91,69.78,1.44,95.83" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.5"/>
                   </svg>
                 </span>
-              </div>
-              <div class="col-6">
-                <span class="Sidebar-navCross Cross"></span>
+                </div>
+                <div class="col-6">
+                  <span class="Sidebar-navCross Cross"></span>
+                </div>
               </div>
             </div>
+          </header>
+          <!-- Barre de navigation - Menu principal body -->
+          <div class="Sidebar-navBody">
+            <ul class="Sidebar-navItems List-items">
+              <li class="Sidebar-navItem List-item">
+                <a href="#logo" class="Sidebar-navItemLink" title="Fractory.io - Accueil">
+                  Accueil
+                </a>
+              </li>
+              <li class="Sidebar-navItem List-item">
+                <a href="#about" class="Sidebar-navItemLink" title="Fractory.io - A propos">
+                  A propos
+                </a>
+              </li>
+              <li class="Sidebar-navItem List-item">
+                <a href="#contact" class="Sidebar-navItemLink" title="Fractory.io - Contact">
+                  Contact
+                </a>
+              </li>
+            </ul>
           </div>
-        </header>
-        <!-- Barre de navigation - Menu principal body -->
-        <div class="Sidebar-navBody">
-          <ul class="Sidebar-navItems List-items">
-            <li class="Sidebar-navItem List-item">
-              <a href="#logo" class="Sidebar-navItemLink" title="Fractory.io - Accueil">
-                Accueil
-              </a>
-            </li>
-            <li class="Sidebar-navItem List-item">
-              <a href="#about" class="Sidebar-navItemLink" title="Fractory.io - A propos">
-                A propos
-              </a>
-            </li>
-            <li class="Sidebar-navItem List-item">
-              <a href="#contact" class="Sidebar-navItemLink" title="Fractory.io - Contact">
-                Contact
-              </a>
-            </li>
-          </ul>
+          <!-- Barre de navigation - Menu principal footer -->
+          <footer class="Sidebar-navFooter">
+            <a href="mailto:contact@fractory.io" class="Sidebar-navEmail" title="Fractory.io - Contactez nous par mail">
+              contact@fractory.io
+            </a>
+            <ul class="Sidebar-navSocial">
+              <li class="Sidebar-navSocialItem">
+                <a class="Sidebar-socialLink" href="#" title="Fractory.io - Retrouvez nous sur Instagram">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="Sidebar-navSocialItem">
+                <a class="Sidebar-socialLink" href="#" title="Fractory.io - Aimez notre page Facebook">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="Sidebar-navSocialItem">
+                <a class="Sidebar-socialLink" href="#" title="Fractory.io - Suivez nous sur Twitter">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="Sidebar-navSocialItem">
+                <a class="Sidebar-socialLink" href="#" title="Fractory.io - Découvrez nous sur LinkedIn">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </footer>
         </div>
-        <!-- Barre de navigation - Menu principal footer -->
-        <footer class="Sidebar-navFooter">
-          <a href="mailto:contact@fractory.io" class="Sidebar-navEmail" title="Fractory.io - Contactez nous par mail">
-            contact@fractory.io
-          </a>
-          <ul class="Sidebar-navSocial">
-            <li class="Sidebar-navSocialItem">
-              <a class="Sidebar-socialLink" href="#" title="Fractory.io - Retrouvez nous sur Instagram">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-            <li class="Sidebar-navSocialItem">
-              <a class="Sidebar-socialLink" href="#" title="Fractory.io - Aimez notre page Facebook">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="Sidebar-navSocialItem">
-              <a class="Sidebar-socialLink" href="#" title="Fractory.io - Suivez nous sur Twitter">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="Sidebar-navSocialItem">
-              <a class="Sidebar-socialLink" href="#" title="Fractory.io - Découvrez nous sur LinkedIn">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-          </ul>
-        </footer>
       </nav>
     </section>
     <!-- Barre de navigation - Fin -->
